# machinelearning

src/Microsoft.ML.Console/: Microsoft.ML.Console.csproj
src/Microsoft.ML.Core/: Microsoft.ML.Core.csproj
src/Microsoft.ML.CpuMath/: Microsoft.ML.CpuMath.csproj
src/Microsoft.ML.Data/: Microsoft.ML.Data.csproj
src/Microsoft.ML.Recommender/: Microsoft.ML.Recommender.csproj
src/Microsoft.ML.StandardTrainers/: Microsoft.ML.StandardTrainers.csproj
src/Microsoft.ML.StandardTrainers/FactorizationMachine/: FactorizationMachineInterface.netcoreapp.cs  FactorizationMachineInterface.netstandard.cs
src/Native/FactorizationMachineNative/: CMakeLists.txt  FactorizationMachineCoreAVX.cpp  FactorizationMachineCoreFMA.cpp  FactorizationMachineCoreSSE.cpp
test/Microsoft.ML.Benchmarks/: KMeansAndLogisticRegressionBench.cs  KMeansHiggs.cs  MatrixFactorizationCustom.cs  Microsoft.ML.Benchmarks.csproj  Program.cs
